# qt-update-app

./: .gitmodules  CMakeLists.txt  Info.plist  Main.qml  installer.iss  main.cpp  updates.xml
release/: appcast-win.xml
src/: UpdateHelper.cpp  UpdateHelper.h
